2008-02-03  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: set requires_null_check for nullable
	  parameters, they're not local variables

	* vapi/gtk+-2.0.vapi: regenerated

2008-02-03  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: accept carriage returns in source files

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* vala/valaproperty.vala: add missing return statement

2008-02-02  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodeassignmentbinding.vala
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorclass.vala,
	  gobject/valaccodegeneratormemberaccess.vala,
	  gobject/valaccodegeneratormethod.vala, vala/valadatatype.vala: add
	  very basic support for properties serving real (non fundamental)
	  structs, they are unboxed and therefore not yet known by the GObject
	  type system when declared

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* compiler/valacompiler.vala: use --directory when writing vapi file

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* vala/valasourcefile.vala: remove basedir workaround used for
	  backward compatibility, so that --library without --basedir
	  works as expected

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* vapi/atk.vapi, vapi/gdk-2.0.vapi, vapi/gio-2.0.vapi,
	  vapi/gnome-vfs-2.0.vapi, vapi/gstreamer-0.10.vapi,
	  vapi/gstreamer-audio-0.10.vapi, vapi/gstreamer-base-0.10.vapi,
	  vapi/gstreamer-interfaces-0.10.vapi, vapi/gstreamer-rtp-0.10.vapi,
	  vapi/gstreamer-tag-0.10.vapi, vapi/gtk+-2.0.vapi,
	  vapi/libglade-2.0.vapi, vapi/liboobs-1.vapi, vapi/libsoup-2.2.vapi,
	  vapi/libsoup-2.4.vapi, vapi/libwnck-1.0.vapi, vapi/pango.vapi,
	  vapi/vte.vapi, vapi/WebKitGtk.vapi: regenerated

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/gidl.vapi, vapigen/valagidlparser.vala:
	  improve support for virtual methods,
	  based on patch by Michael Lawrence, fixes bug 452019

2008-02-02  Jürg Billeter  <j@bitron.ch>
